# targer-api

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  codeql-analysis.yml
examples/: __init__.py  analyze.py
targer/: api.py  constants.py  model.py  test_api.py  test_json.py  test_model.py
targer_api/: __init__.py  api.py  constants.py  model.py  parse.py  test_api.py  test_json.py  test_model.py
tests/: test_api.py  test_json.py  test_model.py
