[project]
name = "targer-api"
authors = [
    {name = "Jan Heinrich Reimer", email = "heinrich.reimer@uni-jena.de"},
]
description = "Simple, type-safe access to the TARGER neural argument tagging APIs."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "diskcache~=5.4",
    "importlib-metadata>=6.8,<8.0",
    "requests~=2.26",
]
dynamic = ["version"]

[project.optional-dependencies]
test =[
    "flake8>=6.1,<8.0",
    "pylint~=3.0",
    "pytest>=7.2,<9.0",
    "pytest-cov~=4.0",
]

[project.urls]
"Homepage" = "https://github.com/webis-de/targer-api"
"Bug Tracker" = "https://github.com/webis-de/targer-api/issues"

[build-system]
requires = ["setuptools>=50", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["targer_api"]
namespaces = false

[tool.setuptools.package-data]
mypkg = ["*.txt", "*.md", "*.rst"]

[tool.pytest.ini_options]
log_cli = "True"
filterwarnings = [
    'ignore::DeprecationWarning',
]

[tool.setuptools_scm]
