[metadata]
name = targer-api
version = attr: targer.__version__
author = Jan Heinrich Reimer
maintainer = Jan Heinrich Reimer
description = Simple, type-safe access to the TARGER neural argument tagging APIs.
long_description = file: README.md
long_description_content_type = "text/markdown"
license_file = LICENSE
url = https://github.com/heinrichreimer/targer-api
project_urls =
    Bug Tracker = https://github.com/heinrichreimer/targer-api/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
python_requires = >=3.6
include_package_data = True
packages = find:
install_requires =
    requests~=2.26.0
